@@ -18,6 +18,7 @@ jobs:
 #          - distro: fedora28 #Need to install git 2.18+
           - distro: fedora29
           - distro: fedora30
+          - distro: fedora33
 
     name: ${{ matrix.distro }}
 
